# lili1

./: .dockerignore  .dockerignore.langgraph  .tiltignore  Cargo.toml  Makefile  README.md  Tiltfile  langgraph.Dockerfile  nx.json  package.json  pyproject.toml  rust.Dockerfile  tilt_config.json
.cargo/: bacon.toml  config.toml
.claude/commands/: commit-simple.md  commit.md
.github/workflows/: ci.yml  tag-release.yml
apps/protos/api/: Cargo.toml  project.json
apps/terran/api/: Cargo.toml  project.json
apps/terran/api/src/: main.rs
apps/zerg/agent/: Makefile  langgraph.json  project.json  pyproject.toml
apps/zerg/agent/src/react_agent/: graph.py  prompts.py
apps/zerg/agent1/: langgraph.json  project.json  pyproject.toml
apps/zerg/agent1/src/react_agent1/: configuration.py  graph.py
apps/zerg/api/: Cargo.toml  Dockerfile  project.json
apps/zerg/api/src/: app_state.rs  main.rs  shared.rs  swagger.rs
apps/zerg/api/src/api/: error.rs  mod.rs
apps/zerg/api/src/api/todo/: controller.rs  mod.rs  router.rs
apps/zerg/job/: .coverage  README.md  project.json  pyproject.toml
apps/zerg/job/tests/: test_hello.py
apps/zerg/job/zerg_job/: hello.py
apps/zerg/operator/: Cargo.toml  Dockerfile  Dockerfile.simple  Makefile  README.md  crossplane-providers.yaml  platform-config.yaml  project.json  test-config-full.yaml  test-config.yaml  test-dependency.yaml  test-gitops.yaml
apps/zerg/operator/config/: default.yaml
apps/zerg/operator/examples/: argocd-setup.yaml  basic-setup.yaml  full-platform.yaml
apps/zerg/operator/k8s/: crd.yaml  deployment.yaml
apps/zerg/operator/manifests/: crossplane-providers.yaml
apps/zerg/operator/src/: cicd.rs  config.rs  controller.rs  crd.rs  dependencies.rs  error.rs  gitops.rs  main.rs
libs/models/book/: Cargo.toml  project.json
libs/models/customer/: Cargo.toml  project.json
libs/python/services/: project.json  pyproject.toml
libs/python/services/src/services/: __init__.py
libs/python/shared/: README.md  project.json  pyproject.toml
libs/python/shared/shared/: __init__.py  hello.py
libs/python/shared/tests/: test_hello.py
libs/rust/services/: Cargo.toml  project.json
libs/rust/services/src/: app.rs  envs.rs  lib.rs  tracing.rs
libs/rust/services/src/model/: task.rs
manifests/kor/: app.yaml  resourcegraphdefinition.yaml
