
[workspace]
resolver = '2'
members = [
	'libs/rust/services',
	'apps/zerg/api',
	'apps/protos/api',
	'apps/terran/api',
	'libs/models/book',
	'libs/models/customer',
]

[workspace.dependencies]
rust_services = { path = 'libs/rust/services' }
clap = { version = '4.5', features = ['derive'] }
strum = { version = '0.27', features = ['derive'] }
strum_macros = '0.27'
tracing-subscriber = { version = '0.3', features = ['env-filter', 'json', 'serde_json'] }
tracing = '0.1'
eyre = { version = '0.6', features = ['default'] }
dotenvy = '0.15'
crossterm = { version = '0.29', features = ['default'] }
axum = { version = '0.8', features = ['default', 'tracing'] }
axum-extra = { version = '0.10', features = ['typed-header'] }
http = { version = '1.2', features = ['default'] }
tower = { version = '0.5', features = ['util'] }
tower-http = { version = '0.6', features = ['timeout', 'trace', 'compression-full', 'decompression-full'] }
tower-cookies = '0.11'
tokio = { version = '1.41', features = ['macros', 'signal', 'rt-multi-thread'] }
tokio-stream = '0.1'
utoipa = { version = '5.4', features = ['uuid', 'macros'] }
utoipa-swagger-ui = { version = '9.0', features = ['axum'] }
utoipa-redoc = { version = '6.0', features = ['axum'] }
utoipa-rapidoc = { version = '6.0', features = ['axum'] }
utoipa-scalar = { version = '0.3', features = ['axum'] }
serde = { version = '1.0', features = ['derive'] }
serde_json = { version = '1.0' }
serde_yaml = { version = '0.9' }
tonic = { version = '0.13', features = ['router', 'default', 'prost', 'server'] }
prost = { version = '0.14', features = ['default'] }
thiserror = '2.0'
validator = { version = '0.20', features = ['derive'] }
time = { version = '0.3', features = ['formatting', 'parsing', 'serde'] }
derive_more = { version = '2.0', features = ['from', 'display'] }
ts-rs = { version = '11.0', features = ['serde-compat'] }
mongodb = { version = '3.2', features = ['default'] }
sqlx = { version = '0.8', default-features = false, features = ['postgres', 'runtime-tokio-rustls', 'macros', 'uuid', 'chrono', 'migrate'] }
bb8-redis = { version = '0.24' }
bb8 = { version = '0.9', features = ['default'] }
uuid = { version = '1.17', features = ['serde', 'v4'] }
influxdb2 = { version = '0.5.2', features = ['rustls'] }
influxdb2-derive = '0.1.1'
ratatui = { version = '0.29', features = ['default'] }
color-eyre = { version = '0.6.3', features = ['default'] }
k8s-openapi = { version = '0.25', features = ['latest'] }
kube = { version = '1.1', features = ['derive', 'runtime'] }

[workspace.lints.rust]
unsafe_code = 'forbid'

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
