[package]
name = "terran_api"
version = "0.1.0"
edition = "2021"


[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
# rdkafka = { version = "0.36", features = ["dynamic-linking"] }
schemars = "0.8"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
