[package]
name = "zerg_api"
version = "0.1.0"
edition = "2021"


[dependencies]
#services.workspace = true
anyhow = '1.0'
axum.workspace = true
axum.tokio = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
tokio.workspace = true
strum.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
