[package]
name = "zerg_api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum.workspace = true
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
dotenvy.workspace = true
uuid.workspace = true
rust_services.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
