[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yurikrupnik", email = "krupnik.yuri@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
