[package]
name = "rust_services"
version = "0.1.0"
edition = "2021"

[dependencies]
#reflective = {path = "reflective"}
#db-resource = {path = "db-resource"}
clap.workspace = true
strum.workspace = true
strum_macros.workspace = true
validator.workspace = true
serde.workspace = true
#redis.workspace = true
sqlx.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tokio.workspace = true
utoipa.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
